/**
 * Module 7.2 - Machine Learning Optimization Strategy (Stub)
 *
 * Placeholder implementation for ML-based optimization.
 * Currently disabled by feature flag - planned for future enhancement.
 */

import { ENABLE_ML } from '../config';
import type { OptimizationCandidate, OptimizationInput } from '../types';
import type { OptimizationStrategy } from './optimization-strategy';

/**
 * Machine Learning optimization strategy (stub implementation)
 *
 * @note This is a placeholder implementation. The actual ML optimization
 * will be implemented when ENABLE_ML feature flag is enabled.
 *
 * Planned features:
 * - Neural network-based schedule prediction
 * - Reinforcement learning for constraint satisfaction
 * - Deep Q-learning for optimization decisions
 * - Transfer learning from historical optimization data
 * - Feature extraction from schedule graphs and constraints
 */
export class MLOptimization implements OptimizationStrategy {
  readonly name = 'MLOptimization';

  /**
   * Check if ML optimization is enabled (currently always false)
   */
  supports(_input: OptimizationInput): boolean {
    return ENABLE_ML;
  }

  /**
   * Placeholder optimization method
   *
   * @param _input - Optimization input (unused in stub)
   * @returns undefined (not implemented)
   *
   * @note Future implementation will include:
   * - Feature extraction from schedule and constraints
   * - Model inference for optimization suggestions
   * - Reinforcement learning episode execution
   * - Return ML-optimized candidate or undefined
   */
  async optimize(
    _input: OptimizationInput
  ): Promise<OptimizationCandidate | undefined> {
    // Stub implementation - always returns undefined
    // TODO: Implement ML optimization when flag is enabled
    // Consider integration with TensorFlow.js or similar ML framework
    return undefined;
  }
}
