/**
 * Module 7.2 - Simulated Annealing Strategy (Stub)
 *
 * Placeholder implementation for simulated annealing optimization.
 * Currently disabled by feature flag - planned for future enhancement.
 */

import { ENABLE_SA } from '../config';
import type { OptimizationCandidate, OptimizationInput } from '../types';
import type { OptimizationStrategy } from './optimization-strategy';

/**
 * Simulated Annealing optimization strategy (stub implementation)
 *
 * @note This is a placeholder implementation. The actual simulated annealing
 * algorithm will be implemented when ENABLE_SA feature flag is enabled.
 *
 * Planned features:
 * - Temperature-based acceptance probability
 * - Cooling schedule (linear, exponential, logarithmic)
 * - Neighborhood generation and exploration
 * - Metropolis criterion for solution acceptance
 */
export class SimulatedAnnealing implements OptimizationStrategy {
  readonly name = 'SimulatedAnnealing';

  /**
   * Check if SA is enabled (currently always false)
   */
  supports(_input: OptimizationInput): boolean {
    return ENABLE_SA;
  }

  /**
   * Placeholder optimization method
   *
   * @param _input - Optimization input (unused in stub)
   * @returns undefined (not implemented)
   *
   * @note Future implementation will include:
   * - Initial temperature calculation
   * - Iterative cooling with neighbor exploration
   * - Acceptance/rejection based on energy difference
   * - Return optimized candidate or undefined
   */
  async optimize(
    _input: OptimizationInput
  ): Promise<OptimizationCandidate | undefined> {
    // Stub implementation - always returns undefined
    // TODO: Implement simulated annealing algorithm when flag is enabled
    return undefined;
  }
}
